--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.5.3
   go_router: ^16.1.0
   smooth_page_indicator: ^1.2.1
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
