--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   go_router: ^16.1.0
   smooth_page_indicator: ^1.2.1
   get_it: ^8.2.0
+  firebase_core:
 
 dev_dependencies:
   flutter_test:
