--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   get_it: ^8.2.0
   firebase_core:
+  firebase_auth: ^6.0.0
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
