shimmer& cached net img

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   fluttertoast: ^8.2.12
   flutter_svg: ^2.2.0
   persistent_bottom_nav_bar: ^6.2.1
+  shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
